# vu-isi-student-results-new

./: .gitignore  Doxyfile  kursiokai.txt  randomGenerator.cpp  readme.md  studentCompute.cpp  studentIO.cpp  test_results.xlsx  vu-isi-student-results.cpp
deque/: .gitignore  main.cpp  makefile  studentCompute.h  studentIO.cpp  studentIO.h  vu-isi-student-results.cpp  vu-isi-student-results.vcxproj
html/: annotated.html  average_8h_source.html  class_person-members.html  class_person.html  class_random_generator-members.html  class_random_generator.html  classes.html  dir_0452535e8fc78675ad941e6d73be74ec.html  dir_3b9095d080168071fa4c1bdc79ce391a.html  dir_3d200a7dd647773b70653e774807b250.html  dir_411e35c46ae726239461f4d31382753e.html  dir_47492d1b659182b22b2db49d754c1dde.html  dir_4eec64f1d88776fe4a7e3bee282ced32.html  dir_68a1fad514a912b0193c0466cedd0fda.html  dir_90fb0cfca28715b546d9d4ac4c895fc6.html  dir_af407e6de685c30da611aaefd682e840.html  dir_dc1bfdb27be5d06a183c97519d806d65.html  dir_e133fe811b73cbebed20bc4fb389a3ab.html  dir_e581cbb563b36398396a2c572065150e.html  dir_ec508e9a1549b5dd9d01387e052b1ef3.html  dir_fc7f37a0b707df788f5f5af978ec86cd.html  files.html  person_8h_source.html  strat1_2deque_2random_generator_8h_source.html  strat1_2deque_2student_compute_8h_source.html  strat1_2deque_2student_i_o_8h_source.html  strat1_2list_2random_generator_8h_source.html  strat1_2list_2student_i_o_8h_source.html  (+22 more)
unit_tests/vector_class/: CMakeLists.txt
unit_tests/vector_class_tests/: CMakeLists.txt  main.cpp
unit_tests/vector_class_tests/tests/: CMakeLists.txt  test.cpp
vector_optimised/: CMakeLists.txt  main.cpp
vector_struct/: CMakeLists.txt  main.cpp  vu-isi-student-results.vcxproj
(+89 files in other folders)
